# rspack-resolver

./: .gitignore  .prettierignore  .prettierrc.js  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  lint-staged.config.mjs  package.json  perf_heavy_resolve.sh  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json
.github/actions/docker-build/: action.yml
.github/actions/pnpm/: action.yml
.github/workflows/: benchmark.yml  ci.yml  codecov.yml  release-npm.yml  release-plz.yml  reusable-build.yml
benches/: package.json  pnpm-lock.yaml  resolver.rs
examples/: heavy_resolve.rs  resolve.js  resolver.rs
examples/tsconfig_references/: tsconfig_references_demo.js
examples/tsconfig_references/app/: package.json  (+2 more)
fixtures/pnp/: .pnp.cjs
fixtures/pnpm-workspace/: package.json
fixtures/tsconfig/: tsconfig_template_variable_with_base_url.json
fixtures/yarn-pnp-benchmark/: .gitignore  .pnp.cjs  README.md  package.json  pkgs.txt  verify.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resolver.rs
napi/: Cargo.toml  browser.js  index.d.ts  index.js  resolver.wasi-browser.js  resolver.wasi.cjs  test.mjs  wasi-worker-browser.mjs  wasi-worker.mjs
napi/__test__/: resolver.spec.mjs
napi/src/: lib.rs  options.rs  tracing.rs
napi/tests/: options.test.mjs
npm/: README.md  package.json
scripts/: prepublish.mjs  publish.mjs  publish_handler.mjs  version.mjs  x.mjs
src/: builtins.rs  cache.rs  context.rs  error.rs  file_system.rs  file_system.rs.orig  lib.rs  lib.rs.orig  main.rs  options.rs  package_json.rs  path.rs  resolution.rs  specifier.rs  tsconfig.rs
src/package_json/: mod.rs  seder.rs  simd.rs
src/tests/: alias.rs  browser_field.rs  builtins.rs  dependencies.rs  exports_field.rs  extension_alias.rs  extensions.rs  fallback.rs  full_specified.rs  imports_field.rs  incorrect_description_file.rs  incorrect_description_file.rs.orig  main_field.rs  memory_fs.rs  missing.rs  mod.rs  package_json.rs  pnp.rs  resolve.rs  restrictions.rs  roots.rs  scoped_packages.rs  simple.rs  simple.rs.orig  symlink.rs  tsconfig_paths.rs  tsconfig_paths.rs.orig  tsconfig_project_references.rs  windows.rs
tests/: integration_test.rs  package.json  resolve_test.rs
(+24 files in other folders)
