[package]
edition = "2024"
name    = "rspack_napi_resolver"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
doctest    = false
test       = false

[dependencies]
napi               = { version = "3.5.2", default-features = false, features = ["napi3", "serde-json", "async"] }
napi-build         = { version = "2.3.1", default-features = false }
napi-derive        = { version = "3.3.3" }
regex              = "1.11.1"
rspack_resolver    = { path = "..", package = "rspack_resolver" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "ansi"] }

[build-dependencies]
napi-build = "2.3.1"

[package.metadata.cargo-machete]
ignored = ["napi"]
